--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@typescript-eslint/parser": "^6.0.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
