--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   "homepage": "https://github.com/RealOFF/who-am-i-bot#readme",
   "dependencies": {
     "@prisma/client": "5.5.0",
-    "node-telegram-bot-api": "^0.63.0",
+    "@telegraf/types": "^6.9.1",
     "prisma": "^5.5.0",
+    "telegraf": "^4.15.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@swc/core": "^1.3.94",
     "@types/node": "^20.8.7",
-    "@types/node-telegram-bot-api": "^0.61.11",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.0.0",
     "dotenv": "^16.3.1",
