--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   "dependencies": {
     "@prisma/client": "5.5.0",
     "@telegraf/types": "^6.9.1",
+    "pino": "^8.16.1",
+    "pino-pretty": "^10.2.3",
     "prisma": "^5.5.0",
     "telegraf": "^4.15.0",
-    "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
